--- a/package.json
+++ b/package.json
@@ -9,19 +9,49 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
+    "@giscus/react": "^2.3.0",
+    "@next/third-parties": "^14.2.3",
+    "@types/node": "20.8.6",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "clsx": "^2.0.0",
+    "contentlayer": "^0.3.4",
+    "eslint": "8.52.0",
+    "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
+    "install": "^0.13.0",
+    "next": "13.5.6",
+    "next-contentlayer": "^0.3.4",
+    "next-themes": "^0.2.1",
+    "postcss": "8.4.29",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-wrap-balancer": "^1.1.0",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^7.0.0",
+    "rehype-pretty-code": "^0.10.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^3.0.1",
+    "shiki": "^0.14.4",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint-config-next": "13.5.6",
+    "postcss": "^8",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
