--- a/package.json
+++ b/package.json
@@ -3,39 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": " contentlayer build && next build",
+    "dev": "velite && next dev --turbopack",
+    "build": "velite && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@giscus/react": "^2.3.0",
-    "@next/third-parties": "^14.2.3",
+    "@giscus/react": "^3.1.0",
+    "@next/third-parties": "^16.1.6",
     "@types/node": "20.8.6",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
-    "eslint": "8.52.0",
-    "eslint-config-next": "13.4.19",
-    "framer-motion": "^10.16.4",
-    "install": "^0.13.0",
-    "next": "13.5.6",
-    "next-contentlayer": "^0.3.4",
-    "next-themes": "^0.2.1",
+    "framer-motion": "^12.29.2",
+    "next": "^16.1.6",
+    "next-themes": "^0.4.6",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-wrap-balancer": "^1.1.0",
-    "reading-time": "^1.5.0",
-    "rehype-autolink-headings": "^7.0.0",
-    "rehype-pretty-code": "^0.10.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^3.0.1",
-    "shiki": "^0.14.4",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^3.22.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
@@ -43,15 +33,16 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "velite": "^0.3.1"
   }
 }
